# apertium-fin-nor

./: .travis.yml  AUTHORS  Makefile.am  README  apertium-fin-nor.fin-nob.rtx  apertium-fin-nor.fin-nob.t1x  apertium-fin-nor.fin-nor.dix  apertium-fin-nor.nob-fin.lrx  apertium-fin-nor.nor-fin.rtx  apertium-fin-nor.nor-fin.t1x  configure.ac  modes.xml
dev/: giellalt2apes.py
docs/: Makefile.am  apertium-fin-nor.fin-nno.t1x.html  apertium-fin-nor.fin-nno.t2x.html  apertium-fin-nor.fin-nno.t3x.html  apertium-fin-nor.fin-nob.t1x.html  apertium-fin-nor.fin-nob.t2x.html  apertium-fin-nor.fin-nob.t3x.html  apertium-fin-nor.fin-nor.dix.html  apertium-fin-nor.nor-fin.dix.html  apertium-fin-nor.nor-fin.t1x.html  apertium-fin-nor.nor-fin.t2x.html  apertium-fin-nor.nor-fin.t3x.html  index.md  statistics.html
test/: fin-nno-chunker-expected.txt  fin-nno-disam-expected.txt  fin-nno-generator-expected.txt  fin-nno-lex-expected.txt  fin-nno-postchunk-expected.txt  fin-nob-morph-expected.txt  fin-nob-pretransfer-expected.txt  fin-nor-input.txt  nno-fin-chunker-expected.txt  nno-fin-disam-expected.txt  nno-fin-generator-expected.txt  nno-fin-input.txt  nno-fin-lex-expected.txt  nno-fin-morph-expected.txt  nno-fin-postchunk-expected.txt  nno-fin-tagger-expected.txt  nob-fin-biltrans-expected.txt  nob-fin-disam-expected.txt  nob-fin-generator-expected.txt  nob-fin-input.txt  nob-fin-interchunk-expected.txt  nob-fin-lex-expected.txt  nob-fin-morph-expected.txt  nob-fin-postchunk-expected.txt  nob-fin-pretransfer-expected.txt  tests.json
texts/: klartale.no-ber-norge-gjore-som-finland.text  klartale.no-en-brite-er-arrestert-for-trussel.text  klartale.no-korona-stopper-ikke-pride.text  nn.wikipedia.org-noreg.text  nn.wikipedia.org-pita.text  nn.wikipedia.org-startrek.text  no.wikipedia.org-brunost.text  no.wikipedia.org-chili.text  no.wikipedia.org-finalfantasy.text  no.wikipedia.org-himym.text  no.wikipedia.org-iskrem.text  no.wikipedia.org-pokemon.text  no.wikipedia.org-tove-jansson.text  story.nno.text  story.nob.text  tarina.fin.text
